--- a/index.html
+++ b/index.html
@@ -43,23 +43,25 @@
     <div class="full">
     <section class="sec-1">
         <div class="box">
-            <div class="white"><p>Order online</p></div>
+            <div class="white"><span>Order online<br>Stay home and order to your doorstep</br></span></div>
             <img src="https://b.zmtcdn.com/webFrontend/e5b8785c257af2a7f354f1addaf37e4e1647364814.jpeg?output-format=webp&amp;fit=around|402:360&amp;crop=402:360;*,*" >
         </div>
         <div class="box">
-            <div class="white"><p>Dining</p></div>
+            <div class="white"><span>Dining<br>View the cities favourite dining venues</br></span></div>
             <img src="https://b.zmtcdn.com/webFrontend/d026b357feb0d63c997549f6398da8cc1647364915.jpeg?output-format=webp&fit=around|402:360&crop=402:360;*,*">
         </div>
     </section>
     <section class="middle">
-        <div class="sec-2"> 
-            <h2>Collections</h2>
-            <div>
-                <h4>Explore curated lists of top rerstaurant, cafes, pubs, and bars in kochi, based on trends</h4>
-                <span>All collections in kochi &nbsp; <i class="fas fa-caret-right"></i></span>
-            </div>  
-
+        <div>
+            <div class="sec-2"> 
+                <h2>Collections</h2>
+                <div class="collection">
+                    <h4>Explore curated lists of top restaurants, cafes, pubs, and bars in Kochi, based on trends</h4>
+                    <span>All collections in kochi &nbsp; <i class="fas fa-caret-right"></i></span>
+                </div>  
+            </div>
         </div>
+
         <div class="sec-3">
             <div class="box-1">
                 <div><span>Places for Art Lovers<br> 17 Places</br></span><i class="fas fa-caret-right"></i></div>
@@ -67,23 +69,23 @@
 
             </div>
             <div class="box-1">
-                <div><span>Places for Art Lovers<br> 17 Places</br></span><i class="fas fa-caret-right"></i></div>
+                <div><span>Great Cafes<br>11 Places</br></span><i class="fas fa-caret-right"></i></div>
                 <img src="imgs/bfa5063b43c9b8f6c9c3b1a37c815d3b_1676552471.avif">
 
             </div>
             <div class="box-1">
-                <div><span>Places for Art Lovers<br> 17 Places</br></span><i class="fas fa-caret-right"></i></div>
+                <div><span>Places of Authentic Kuzhi...<br>5 Places</br></span><i class="fas fa-caret-right"></i></div>
                 <img src="https://b.zmtcdn.com/data/collections/34aa4d41b764989b6b832e633b1bb67c_1676575122.jpg?output-format=webp">
 
             </div>
             <div class="box-1">
-                <div><span>Places for Art Lovers<br> 17 Places</br></span><i class="fas fa-caret-right"></i></div>
+                <div><span>Best Luxury Dining Places<br>22 Places</br></span><i class="fas fa-caret-right"></i></div>
                 <img src="https://b.zmtcdn.com/data/collections/7740e149b7c0af852623132420db3adf_1740119992.png?output-format=webp" loading="lazy" class="sc-s1isp7-5 fyZwWD">
 
             </div>
         </div>
         <h1>Popular localities in and around Kochi</h1>
-        <di class="sec-4">
+        <div class="sec-4">
             <div class="box-2">
 
                 <div><span>Kakkanad<br> 17 Places</br></span><i class="fas fa-caret-right"></i></div>
@@ -126,7 +128,7 @@
             </div>
             <div class="box-2">
 
-                <div><span>See more</span><br> 17 Places</br></span><i class="fas fa-caret-right"></i></div>
+                <div><span>See more</span><i class="fas fa-caret-right"></i></div>
 
             </div>
             
@@ -190,7 +192,7 @@
         <div class="sec-7">
             <div class="first">
                 <div>
-                    <img src="https://b.zmtcdn.com/web_assets/b40b97e677bc7b2ca77c58c61db266fe1603954218.png?fit=around|198:42&crop=198:42;*,">
+                    <img class="footer" src="https://b.zmtcdn.com/web_assets/b40b97e677bc7b2ca77c58c61db266fe1603954218.png?fit=around|198:42&crop=198:42;*,">
                 </div>
                 <div class="first-1">
                     <div>
