--- a/index.html
+++ b/index.html
@@ -36,19 +36,26 @@
                     <input type="text" placeholder="Search for a rerstaurant, cuisine or a dish">
                 </div>
             </div>
+           
             <div class="header-backpic">
                 <img src="https://b.zmtcdn.com/web_assets/81f3ff974d82520780078ba1cfbd453a1583259680.png">
             </div>
     </header>
-    
+
     <div class="full">
     <section class="sec-1">
         <div class="box">
-            <div class="white"><span>Order online<br>Stay home and order to your doorstep</br></span></div>
+            <div class="white">
+                <span>Order online</span>
+                <p>Stay home and order to your doorstep</p>
+            </div>
             <img src="https://b.zmtcdn.com/webFrontend/e5b8785c257af2a7f354f1addaf37e4e1647364814.jpeg?output-format=webp&amp;fit=around|402:360&amp;crop=402:360;*,*" >
         </div>
         <div class="box">
-            <div class="white"><span>Dining<br>View the cities favourite dining venues</br></span></div>
+            <div class="white">
+                <span>Dining</span>
+                <p>View th city's favourite dining venues</p>
+            </div>      
             <img src="https://b.zmtcdn.com/webFrontend/d026b357feb0d63c997549f6398da8cc1647364915.jpeg?output-format=webp&fit=around|402:360&crop=402:360;*,*">
         </div>
     </section>
